--- a/styles.css
+++ b/styles.css
@@ -194,3 +194,17 @@ footer p{
 @media only screen and (min-width: 992px) {...}
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {...}
+
+,carousel-control{
+  color: black;
+}
+
+
+
+.control-box{
+
+}
+.control-box-inner{
+  max-width: 300px;
+  margin: 0 auto;
+}
